add new website from server na

--- a/xem-phim-moi/dem-khong-ngu-o-pattaya/index.html
+++ b/xem-phim-moi/dem-khong-ngu-o-pattaya/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             1
+             2
             </dd>
             <br/>
            </dl>
@@ -1614,28 +1614,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-en">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
            <span class="status">
             FHD Vietsub
@@ -1648,6 +1626,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              The Blood of Youth
+            </span>
+            <span class="list-top-movie-item-view">
+             51 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-en">
+             Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
              51 lượt xem
@@ -1671,18 +1671,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bi-mat-toi-loi" title="Bí Mật Tội Lỗi">
+          <a class="list-top-movie-link" href="/phim-moi/anh-o-bac-kinh-doi-em" title="Anh Ở Bắc Kinh Đợi Em">
            <span class="status">
-            HD Vietsub
+            HD Vietsub + Thuyết minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bi-mat-toi-loi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-o-bac-kinh-doi-em-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bí Mật Tội Lỗi
+             Anh Ở Bắc Kinh Đợi Em
             </span>
             <span class="list-top-movie-item-en">
-             Kill Mobile
+             Wait in Beijing
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1693,18 +1693,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/truong-an-nhu-co" title="Trường An Như Cố">
+          <a class="list-top-movie-link" href="/phim-moi/cap-doi-cay-nhu-ot" title="Cặp Đôi Cay Như Ớt">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truong-an-nhu-co-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cap-doi-cay-nhu-ot-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Trường An Như Cố
+             Cặp Đôi Cay Như Ớt
             </span>
             <span class="list-top-movie-item-en">
-             One and Only
+             Koo Za Rot Zab - Weir And Min
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/force-of-execution" title="Force of Execution">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/force-of-execution-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Force of Execution
+            </span>
+            <span class="list-top-movie-item-en">
+             Force of Execution
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1715,21 +1737,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bi-duoi-khoi-to-doi-anh-hung-toi-nham-den-mot-cuoc-song-nhan-nha-o-vung-bien-cuong-phan-2" title="Bị đuổi khỏi tổ đội anh hùng, tôi nhắm đến một cuộc sống nhàn nhã ở vùng biên cương Phần 2">
+          <a class="list-top-movie-link" href="/phim-moi/danny-boy" title="Danny Boy">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bi-duoi-khoi-to-doi-anh-hung-toi-nham-den-mot-cuoc-song-nhan-nha-o-vung-bien-cuong-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/danny-boy-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bị đuổi khỏi tổ đội anh hùng, tôi nhắm đến một cuộc sống nhàn nhã ở vùng biên cương Phần 2
+             Danny Boy
             </span>
             <span class="list-top-movie-item-en">
-             真の仲間じゃないと勇者のパーティーを追い出されたので、辺境でスローライフすることにしました 第2期
+             Danny Boy
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1737,40 +1759,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoshino-gen-tuyen-tap-hoa-nhac-2015-2023" title="Hoshino Gen: Tuyển tập hòa nhạc 2015-2023">
+          <a class="list-top-movie-link" href="/phim-moi/quai-thu-rung-sau" title="Quái Thú Rừng Sâu">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoshino-gen-tuyen-tap-hoa-nhac-2015-2023-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quai-thu-rung-sau-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hoshino Gen: Tuyển tập hòa nhạc 2015-2023
+             Quái Thú Rừng Sâu
             </span>
             <span class="list-top-movie-item-en">
-             Gen Hoshino Concert Recollections 2015-2023
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mi-anh-cuong-hoa" title="Mị Ảnh Cuồng Hoa">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mi-anh-cuong-hoa-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Mị Ảnh Cuồng Hoa
-            </span>
-            <span class="list-top-movie-item-en">
-             the killing angels
+             Wildling
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
