add new website from server na

--- a/xem-phim-moi/dem-khong-ngu-o-pattaya/index.html
+++ b/xem-phim-moi/dem-khong-ngu-o-pattaya/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1671,62 +1671,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/anh-o-bac-kinh-doi-em" title="Anh Ở Bắc Kinh Đợi Em">
-           <span class="status">
-            HD Vietsub + Thuyết minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-o-bac-kinh-doi-em-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Anh Ở Bắc Kinh Đợi Em
-            </span>
-            <span class="list-top-movie-item-en">
-             Wait in Beijing
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cap-doi-cay-nhu-ot" title="Cặp Đôi Cay Như Ớt">
+          <a class="list-top-movie-link" href="/phim-moi/mieu-nu" title="Miêu Nữ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cap-doi-cay-nhu-ot-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mieu-nu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cặp Đôi Cay Như Ớt
+             Miêu Nữ
             </span>
             <span class="list-top-movie-item-en">
-             Koo Za Rot Zab - Weir And Min
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/force-of-execution" title="Force of Execution">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/force-of-execution-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Force of Execution
-            </span>
-            <span class="list-top-movie-item-en">
-             Force of Execution
+             Catwoman
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1737,18 +1693,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/danny-boy" title="Danny Boy">
+          <a class="list-top-movie-link" href="/phim-moi/co-dau-dai-chien" title="Cô dâu đại chiến">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/danny-boy-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-dau-dai-chien-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Danny Boy
+             Cô dâu đại chiến
             </span>
             <span class="list-top-movie-item-en">
-             Danny Boy
+             Battle of the Brides
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/gia-dinh-kieu-mau" title="Gia Đình Kiểu Mẫu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gia-dinh-kieu-mau-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Gia Đình Kiểu Mẫu
+            </span>
+            <span class="list-top-movie-item-en">
+             A Model Family
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1759,18 +1737,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/quai-thu-rung-sau" title="Quái Thú Rừng Sâu">
+          <a class="list-top-movie-link" href="/phim-moi/so-phan-cua-vi-hon-the" title="Số phận của vị hôn thê">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quai-thu-rung-sau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/endo-and-kobayashis-live-commentary-on-the-villainess-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Quái Thú Rừng Sâu
+             Số phận của vị hôn thê
             </span>
             <span class="list-top-movie-item-en">
-             Wildling
+             Endo and Kobayashi's Live Commentary on the Villainess
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hon-nhan-dong-tinh" title="Hôn Nhân Đồng Tính">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hon-nhan-dong-tinh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hôn Nhân Đồng Tính
+            </span>
+            <span class="list-top-movie-item-en">
+             Jenny's Wedding
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
